Mon Nov 30 14:02:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Process.cpp:
        * ace/Process.h:
          Fixed gcc warnings

Mon Nov 30 12:38:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-borland.h:
          Started port to C++ Builder 2010, older versions of C++ Builder are
          now deprecated

        * ace/MMAP_Memory_Pool.cpp:
          Layout change

        * ace/OS_NS_sys_time.h:
        * ace/OS_NS_sys_time.inl:
          Removed workarounds for ancient wince versions

        * ace/Process.cpp:
        * ace/Process.h:
          Use bool and size_t and removed some ugly casts

        * ace/Trace.cpp:
        * ace/Trace.h:
          Use bool

Mon Nov 30 10:53:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/patches/18-fix-bswap-detection.dpatch:
        * debianbuild/patches/22-tao_idl-64bit-fix.dpatch:
          Removed, not needed anymore

Mon Nov 30 10:08:00 UTC 2009  Martin Corino <mcorino@remedy.nl>

        * include/makeinclude/platform_linux_common.GNU:

          Added some rules to support cross builds.
          Setting the environment variable (or make variable) CROSS_COMPILE
          to the platform tool prefix will redefine the CC, CXX and AR
          variables and add a '-Wl,-rpath-link' option to the LDFLAGS.
          If the HOST_ROOT variable has been set as well TAO_IDLxxx variables
          will be redefined as well.

Mon Nov 30 08:58:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * bin/Download.html:
          updated for x.7.5

        * bin/make_release.py
        * rpmbuild/ace-tao-ciao.spec
        * rpmbuild/ace-tao.spec
          Updated to match opensuse build service

        * docs/svn/svn-prefs.reg:
          Added idl3+

        * etc/index.html:
          Added 5.7.5

Sun Nov 29 13:06:02 CST 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
